# PySlo

./: CHANGES  CMakeLists.txt  COPYING  README
lib/python/PySlo/: __init__.py
share/cmake/: FindAqsis.cmake  FindDelight.cmake  FindPRMan.cmake  FindVFXPython.cmake  TestForRmanVersion.cxx  TestPythonVersion.cxx
src/: CMakeLists.txt  PySlo.cpp  PySloGetRmanInfo.cpp  PySloModule.cpp  __init__.py.in
tests/: metadata.py  run.sh  test.py  test_rsl1.sl  test_rsl1_big.sl  test_rsl2.sl  test_rsl2_big.sl
